Remove as funcionalidades relacionadas ao qr code
